@@ -1,3 +1,4 @@
 EBUILD qutim-l10n-0.2.9999.ebuild 1263 RMD160 bfebe07fae6750d0f2e273b57f2717ef2b576aea SHA1 d88159d325c9f645cc50a9cdf099be0e74dd2a9e SHA256 14ccf546e8712d9b6729027e615aebd135afebe539912a9f32f10c3da802825a
-MISC ChangeLog 269 RMD160 30713653f838df386a343f15cae895d3715edd0e SHA1 4a2e984240a3e284877378e907bd2da510eaadf4 SHA256 85e0e06359f38333d79a49d4dadf6321f59afa72b0b20ab93d5ec0bbf45ec75d
+EBUILD qutim-l10n-0.3.9999.ebuild 1264 RMD160 d1856ef87026b46ae8f2e13511f643779b72f62d SHA1 09e468d38d0b160871baf807bf9c9d0934e9107a SHA256 33471a5c1cd5819e424a56cd83bbc4ba9e7eff435b074401d1144d163afd3f13
+MISC ChangeLog 405 RMD160 2a6b82543456295675562e6b43eb17f595e01846 SHA1 a84355a35bffd81f53ff016ab4a0cd79ff969470 SHA256 d5c0080450eb1d3007136385d672e918971494166e28c3d4f6eacb1bf5cb3078
 MISC metadata.xml 242 RMD160 9c5b910c7c12c8a1ed8bd87a7ad0b9bcfc4733d4 SHA1 4c37aa691790a1b3c6ce27b54062f88f3243b1b7 SHA256 5cfd8583ff311843d5530c5a3d10fbe6c87b58b100697e505b3ac1838059755a
